@@ -1,4 +1,7 @@
 DFHack Future
+    Internals:
+        EventManager should handle INTERACTION triggers a little better. It still can get confused about who did what but only rarely.
+            devel/all-bob.lua: renames everyone Bob to help test interaction-trigger
 
 DFHack 0.40.15-r1
     Fixes:
